docs(spec): #24の解析完全性設計を確定 #24
parse完全性、source再対応付けのcontext境界、
call-site欠落検出をD14〜D17として明確化する。
fresh-context review PASSを記録し、clarify phaseを完了する。